# cat-vrs

./: .gitignore  .gitmodules  .requirements.txt  CONTRIBUTING.md  CONTRIBUTORS.md  Pipfile  README.md  setup.cfg
.github/: CODEOWNERS
.github/workflows/: tests.yml
docs/: Makefile
docs/source/: conf.py  def  def-core  def-profiles  defs  getting_involved.rst  index.rst  introduction.rst  requirements.txt  rst_epilog  schema.rst  terms_and_model.rst
docs/source/Appendices/: design_decisions.rst  faq.rst  glossary.rst  index.rst  relationships.rst
docs/source/_static/: theme_overrides.css
docs/source/appendices/: faq.rst  index.rst  style.rst
examples/: canonicalAllele-ex1.yaml  categoricalCnv-ex1.yaml  categoricalCnv-ex2.yaml  describedVariant-ex1.yaml  proteinSequenceConsequence-ex1.yaml
schema/: Makefile  catvars-source.yaml  catvars.json  catvars.yaml  catvrs-source.yaml  catvrs.json  catvrs.yaml  core-im  core.yaml  data-types  domain-entities  gkrule-source.yaml  gkrule.json  gkrule.yaml  gks-common  gks-core-im  gks-domain-entities  gks.common-source.yaml  gks.common.json  gks.common.yaml  helpers.py  merged.json  merged.yaml  vod-source.yaml  vod.json  vod.yaml  vrs  vrs.yaml  vrsatile.json  vrsatile.yaml  vrule-source.yaml  vrule.json  vrule.yaml  y2j  y2j.py  y2t.py
schema/cat-vrs/: Makefile  cat-vrs-source.yaml
schema/catvrs/: catvrs-source.yaml
schema/defs/: ValueObjectDescriptor.rst  VariationDescriptor.rst  VcfRecord.rst
submodules/: vrs
tests/: config.py  test_basic.py  test_definitions.yaml
tests/fixtures/: proteinSequenceConsequence-ex1.yaml
tools/: source_proc.py  y2t.py
working_examples/: cnv.jsonc  simple_repeating_del.json
(+119 files in other folders)
