[metadata]
name = vrsatile.tools
version = 0.1.0
author = Alex Wagner, PhD
author_email = Alex.Wagner@nationwidechildrens.org
description = A python package for VRSATILE Tools.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ga4gh/vrsatile
project_urls =
    Bug Tracker = https://github.com/ga4gh/vrsatile/issues
    Documentation = https://vrsatile.readthedocs.org/en/latest
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = tools
packages = find:
python_requires = >=3.6
scripts =
    tools/jsy2js.py
    tools/source2jsy.py
    tools/y2t.py

[options.packages.find]
where = tools