[metadata]
name = ga4gh.vrsatile
version = 0.1.0
author = Alex Wagner, PhD
author_email = Alex.Wagner@nationwidechildrens.org
description = VRS Added Tools for Interoperable Loquacious Exchange
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ga4gh/vrsatile
project_urls =
    Bug Tracker = https://github.com/ga4gh/vrsatile/issues
    Documentation = https://vrsatile.readthedocs.org/en/latest
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find_namespace:
python_requires = >=3.6
scripts =
    src/ga4gh/scripts/jsy2js.py
    src/ga4gh/scripts/source2jsy.py
    src/ga4gh/scripts/y2t.py

[options.packages.find]
where = src
